# virtual_65-in-1_28-250

./: .gitignore  .gitmodules  LICENSE  README.md  build-wasm.sh  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: deploy.yml
Circuits/: P05-Metronome.txt  P18-Siren.txt  P45-Code-Practice-Oscillator.txt  P46-Crystal-Diode-AM-Radio.txt
circuitjs_sim/: Science_Fair_65_in_1.txt  p45.txt
rust/: .gitignore  Cargo.toml  README.md  build.sh  rust-toolchain.toml
rust/sim-core/: Cargo.toml
rust/sim-core/src/: compile.rs  diode.rs  lib.rs  linear.rs  netlist.rs  sparse.rs  transient.rs  transistor.rs  types.rs
rust/sim-core/tests/: parity.rs  parity_circuit.rs  parity_stamps.rs
rust/sim-wasm/: Cargo.toml
rust/sim-wasm/src/: lib.rs
scripts/: cds-demo.ts  gen-circuit-parity.deferred.ts  gen-circuit-parity.ts  gen-stamp-parity.ts  runtime-demo.ts  siren-debug.ts  solar-demo.ts  terminals-status.ts  test-sparse-parity.ts  test-stamps-parity.ts  topology-demo.ts  transient-demo.ts
src/: worklet.d.ts
src/lib/: index.ts  types.ts
src/lib/audio/: relay-click.ts
src/lib/components/: Board.svelte  Terminal.svelte  VariableKnob.svelte  WiringLayer.svelte
src/lib/components/board/: BoardControlKnobs.svelte  BoardDebugPanels.svelte  KeySwitchOverlay.svelte  LampGlowOverlay.svelte  RelayStateOverlay.svelte  VoltmeterOverlay.svelte  helpers.ts
src/lib/data/: components.ts  index.ts  terminalPositions.ts
src/lib/sim/: config.ts  dc-rust.ts  dc.ts  diode-wasm.ts  diode.ts  index.ts  linear.ts  netlist.ts  parity-check.ts  sim-audio-worklet.ts  sim-rust-worklet-host.ts  sim-worker.ts  solver-engine.ts  sparse-wasm.ts  sparse.ts  topology.ts  transient-wasm.ts  transient.ts  transistor-wasm.ts  transistor.ts  worker-protocol.ts
src/lib/sim/wasm/: sim_wasm.d.ts  sim_wasm.js  sim_wasm_bg.wasm  (+1 more)
src/lib/stores/: wires.svelte.ts
src/routes/: +page.svelte
static/audio/: sim-rust-worklet.js  sim-worklet-polyfill.js  speaker-worklet.js  speaker-worklet.js.bak
